--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,18 @@
             <artifactId>dcm4che-json</artifactId>
             <version>${dcm4che.version}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/javax.json/javax.json-api -->
+        <dependency>
+            <groupId>javax.json</groupId>
+            <artifactId>javax.json-api</artifactId>
+            <version>1.1.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.json</artifactId>
+            <version>1.1.4</version>
+        </dependency>
+
 
         <!-- Weasis Tool-->
         <dependency>
